# running

./: .gitignore  CLAUDE.md  README.md  connection-to-apps.md  resumen.md  running-prd.md  sources-connection.md
runner-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bootstrap_env.py  cloudbuild.yaml  commands.md  docker-compose.yml  init_profile.py  inject_browser_session.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sync_historical.py
runner-agent/agents/: diagnostic_v2.py  fatigue_agent.py  nutrition_agent.py  orchestrator.py  plan_agent.py  science_agent.py  technique_agent.py  today_action_builder.py
runner-agent/alembic/: README.md  env.py
runner-agent/alembic/versions/: 20260521_0001_initial_multitenant_schema.py  20260524_0001_activities_table.py  20260525_0001_multitenant_essentials.py  20260623_0001_body_composition.py
runner-agent/api/: deps.py  main.py  settings.py
runner-agent/api/routers/: activities.py  body_composition.py  cronologia.py  dashboard.py  diagnosis.py  health.py  report.py  sync.py  users.py
runner-agent/data/: garmin_client.py  scopus_client.py  wos_client.py
runner-agent/infra/: README.md
runner-agent/memory/: __init__.py  database.py  db.py  models.py  runner_profile.py
runner-agent/reports/: weekly_report.py
runner-agent/scheduler/: daily_check.py
runner-agent/scripts/: daily_report.py  deploy.sh  migrate_sqlite_to_postgres.py  seed_jose_known_data.py  sync_garmin_real.py
runner-agent/security/: crypto.py
runner-agent/tests/: conftest.py
(+106 files in other folders)
